Adjust hostile dismay modifiers for balance; update localization for 'Dismay' decision effects

--- a/way_of_the_voice/localization/english/lifestyles/zzz_thuum_decisions_l_english.yml
+++ b/way_of_the_voice/localization/english/lifestyles/zzz_thuum_decisions_l_english.yml
@@ -4,7 +4,7 @@
 
  unrelenting_force_decision_title: "Use 'Unrelenting Force' While in an Army"
  unrelenting_force_decision_desc: "You narrow your eyes and feel the old words stirring in your chest. The power thrums in your throat, begging to be unleashed.\n\nWhether to intimidate, defend, or simply make an entrance, the decision is yours. The walls may crack, the people may scatter — but your Thu'um will be heard."
- unrelenting_force_decision_effect_tt: "You use 'Fus Ro Dah' to shatter the fort walls at your army's position."
+ unrelenting_force_decision_effect_tt: "March and lead an army to a location and use 'Unrelenting Force' to shatter enemy fortresses:\n\nFus: [GetModifier('thuum_siege_small_modifier').GetNameWithTooltip]\nFus Ro: [GetModifier('thuum_siege_medium_modifier').GetNameWithTooltip]\nFus Ro Dah: [GetModifier('thuum_siege_large_modifier').GetNameWithTooltip]"
 
  become_tongue_decision_title: "Visit the Priest of Kyne in Gildergreen"
  become_tongue_decision_desc: "After a long day at court, a courtier excitedly tells me of a northern power said to shatter fortresses, calm beasts, and command the skies with just one's voice.\n\nIntrigued, I consider seeking out the priests of Kyne in Gildergreen to learn this power for myself."
@@ -23,6 +23,7 @@
 
  dismay_decision_title: "Use 'Dismay' and Hinder Your Enemies"
  dismay_decision_desc: "You understand that Words of Power can be used to intimidate and frighten. You take a deep breath, feeling the power of the Thu'um within you, and prepare to unleash it upon your enemies, even friends."
+ dismay_decision_effect_tt: "March and lead an army to a location and use 'Dismay' to cast fear into your enemies:\n\nFaas: [GetModifier('hostile_dismay_modifier').GetNameWithTooltip]\nFaas Ru: [GetModifier('hostile_dismay_two_modifier').GetNameWithTooltip]\nFaas Ru Maar: [GetModifier('hostile_dismay_three_modifier').GetNameWithTooltip]"
 
  battle_fury_decision_title: "Use 'Battle Fury' and Inspire Your Allies"
  battle_fury_decision_desc: "You take a deep breath, feeling the power of the Thu'um within you, and prepare to unleash it upon your allies to strengthen and embolden them."
