--- a/way_of_the_voice/localization/english/thuum_options_l_english.yml
+++ b/way_of_the_voice/localization/english/thuum_options_l_english.yml
@@ -23,6 +23,14 @@
  hostile_dismay_two_modifier: "Population Dismayed By Faas Ru"
  hostile_dismay_three_modifier: "Population Dismayed By Faas Ru Maar"
 
+ ominous_tongue_diplomacy_success: "Favoured Tongue"
+ ominous_tongue_diplomacy_failure: "Hated Tongue"
+ ominous_tongue_last_option: "Ominous Tongue"
+ trained_soldiers_modifier: "Soldiers Trained"
+ respected_by_pilgrims_modifier: "Respected By Pilgrims"
+ revered_by_pilgrims_modifier: "Revered By Pilgrims"
+
+
  THUUM_CONQUEST_COUNTY_CB_NAME:1 "Aspect of Dominion: Conquer [county|E]"
  THUUM_CONQUEST_DUCHY_CB_NAME:1 "Aspect of Dominion: Conquer [duchy|E]"
  THUUM_CONQUEST_CB_SPECIFIC_NAME:1 "Conquer the [TITLE.GetBaseName]"
