Update changelog to include new Shouts and random events for Thu'um characters; fix minor typos and clarify modifiers

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 1.1.0
 Additions:
 - added new Shouts/Words of Power (perks): Battle Fury, Dismay, Dragon Aspect, along with new modifiers tied to the new Words of Power
+- added three new random events to fire every five years for Thu'um characters: Ominous Tongue, Power of Lordship, Kyne's Blessings
 Fixes:
 - fixed wrong flag check for northwind's 2nd word
 - fixed wrong decision cooldown reset for visit northwind decision when choosen the "not now" option
@@ -10,7 +11,10 @@ Changes:
 * monthly piety + 20%
 * zealot vassal opinion + 10
 - upon meditation when visiting Gildergreen, it is now possible to acquire the "Blessed By Kyne" trait and "Dragonborn" trait, with 10% chance and 3% chance respectively.
-- Wrathful Thuum now gives 15 monthly tyranny, instead of 50
+- Wrathful Thuum modifier now gives 15 monthly tyranny, instead of 50
+1.0.4
+- fixed wrong locations being displayed on Word Wall events
+- added a new limit to check if all word wall events are already found
 1.0.3
 - added limit for thuum medidation event firing
 1.0.2
