--- a/changelog.txt
+++ b/changelog.txt
@@ -10,9 +10,11 @@ Changes:
 * an increased chance of success when learning a Word of Power
 * monthly piety + 20%
 * zealot vassal opinion + 10
+- Kyne's Peace decision now gives base either -100 stress or -75 stress.
 - upon meditation when visiting Gildergreen, it is now possible to acquire the "Blessed By Kyne" trait with a 10% chance
 - Wrathful Thuum modifier now gives 15 monthly tyranny, instead of 50
 - adjusted chance on learning a new word upon visiting a Word Wall to make it a little fair
+- better triggers and localization for events
 1.0.4
 - fixed wrong locations being displayed on Word Wall events
 - added a new limit to check if all word wall events are already found
