Buff travel perks for Clear Skies and Whirlwind Sprint; improve travel safety and speed values

--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,9 @@ Changes:
 - Wrathful Thuum modifier now gives 15 monthly tyranny, instead of 50
 - adjusted chance on learning a new word upon visiting a Word Wall to make it a little fair
 - better triggers and localization for events
+- buffed the following traveling perks:
+* Clear Skies Perks now gives 15, 30 and 50 travel Safety
+* Whirlwind Sprint Perks now gives 15, 25, and 35 Travel Speed
 1.0.5
 - fixed trigger event reference for kyne peace decision
 1.0.4
